examples/errors/leftright.tex
\documentclass{article}
\usepackage{amsmath}
\begin{document}
\[
\left( \frac{1}{2}+3 )^{2}
\]
\end{document}
